--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+
+
 MONGODB_URI=mongodb+srv://jihed:melody-generator@melody-generator.fkthwri.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=emofqjsdmfjlqsdkjmlfqs65f5sdfqfjljefkez6df5
 OPENAI_API_KEY=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
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_USERNAME=admin@onmentorship.com
+SMTP_PASSWORD=153648*13499074Lj
+CLIENT_URL= http://localhost:3000
