--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "save": "^2.9.0",
+    "shortid": "^2.2.16",
     "stripe": "^11.16.0",
     "uuid": "^9.0.0"
   }
