--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test",
-    "start": " node index.js"
+    "start": " nodemon index.js"
   },
   "engines": {
     "node": "14.x"
