--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "crons": [
     {
       "path": "/utils/resetGenerations.js",
-      "schedule": "*/1 * * * *"
+      "schedule": " 0 0 * * *"
     }
   ]
 }
