fixed payments array

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   ],
   "crons": [
     {
-      "path": "/resetGenerations",
+      "path": "/api/v1/resetGenerations",
       "schedule": "0 0 * * *"
     }
   ]
