finished adding user to newsletter after sub

--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ PREMIUM_PRICE_ID=price_1MuIBJEfB3VIPNaNYv3xf4Nk
 PACKAGE_PRICE_ID=price_1O7jK0EfB3VIPNaNqsfSXnj7
 
 HOMEPAGE_URL=http://localhost:3000
+MAILCHIMP_API_KEY=17cd2f9576c1b52fb84989fd83d09690-us21
+MAILCHIMP_LIST_ID=e96eeaa98c
