--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "jsonwebtoken": "^9.0.0",
+    "mailchimp-api-v3": "^1.15.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
