--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGODB_URI=mongodb+srv://jihed:tRVBzBSjM4gAqgsa@dev-melody-muse.3g509uc.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=emofqjsdmfjlqsdkjmlfqs65f5sdfqfjljefkez6df5
 OPENAI_API_KEY=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
+OPENAI_API_URL=https://api.openai.com/v1/engines/gpt-3.5-turbo-instruct/completions
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 SMTP_USERNAME=support@melodymuse.ai
